# SecuritySoftLabs

./: .gitignore
lab1/: CMakeLists.txt
lab1/console/: CMakeLists.txt
lab1/console/include/: error_menu.hpp  main_menu.hpp  zip_menu.hpp
lab1/console/include/menu/: base_menu.hpp  json_menu.hpp  main_menu.hpp  text_menu.hpp  xml_menu.hpp  zip_menu.hpp
lab1/console/include/pod/: some_pod.hpp
lab1/console/src/: base_menu.cpp  error_menu.cpp  json_menu.cpp  main.cpp  main_menu.cpp  text_menu.cpp  xml_menu.cpp  zip_menu.cpp
lab1/console/src/menu/: base_menu.cpp  error_menu.cpp  json_menu.cpp  main_menu.cpp  text_menu.cpp  xml_menu.cpp  zip_menu.cpp
lab1/console/src/pod/: some_pod.cpp
lab1/lib/: CMakeLists.txt
lab1/lib/include/: filemanager.hpp  logicdisk.hpp  textformat.hpp
lab1/lib/src/: filemanager.cpp  logicdisk.cpp  textformat.cpp
lab1_py/: main.py
lab2/: CMakeLists.txt
lab2/include/: brute_force_task.hpp  ns26.hpp  range_number.hpp  ranges.hpp  threadpool.hpp
lab2/src/: brute_force_task.cpp  main.cpp  ns26.cpp  threadpool.cpp
